# DiddleDoodleDuel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DiddleDoodleDuel.cpp  DiddleDoodleDuel.h  README.md  client_main.cpp  conanfile.py  diddle_doodle_duel.cpp  diddle_doodle_duel.h  gameconfig.json  main.cpp  server_main.cpp
.github/workflows/: ci.yml
resources/shaders/: watercolor.fs
src/: diddle_doodle_duel.cpp  diddle_doodle_duel.h  game_config.h
src/components/: collision_state.h  input_action.h  input_mapping.h  input_structs.h  inputs.h  movement_structs.h  player.h  position.h  renderable.h  scene_entity.h  username.h  velocity.h
src/core/: event_bus.h  event_definitions.h  game_config_manager.cpp  game_config_manager.h  scene_manager.h  scene_state.h  scene_type.h
src/network/: enet_network.cpp  enet_network.h  game_protocol.h  message_definitions.h  multiplayer_manager.cpp  multiplayer_manager.h  network_interface.h
src/performance/: profiler.h
src/systems/: arrow_render.h  collision.h  debug_render.h  entity_lifecycle_system.h  imgui_system.cpp  imgui_system.h  input.h  movement.h  paint.h  physics_collision.h  physics_movement.h  scene_transition_system.h  system_activation_system.h  ui.h  username_render.h
tests/: CMakeLists.txt  test_app.cpp  test_game_config.cpp
